hphp/hack/test/typecheck/unused_awaitable15.php.exp
File "unused_awaitable15.php", line 8, characters 15-17:
This expression is of type Awaitable, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
File "unused_awaitable15.php", line 3, characters 21-37:
This is why I think it is Awaitable
